Correction in link-image (scrollbars on Safari)

--- a/content/themes/cardinal/src/scss/block/_link-list.scss
+++ b/content/themes/cardinal/src/scss/block/_link-list.scss
@@ -6,9 +6,8 @@
     list-style: none;
     margin: (-$pad * 1em / $fs) 0;
     max-width: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
     padding: 0;
-    //text-overflow: ellipsis;
     text-transform: uppercase;
     
     a {
